# please-bundle

./: Cargo.toml  test.sh
.github/workflows/: ci.yml
example/src/: local.js  main.js
src/: main.rs
